<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.everis</groupId>
    <artifactId>com.everis.parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Pack BBVA - Monitor de Procesos por Lotes</name>

    <modules>
        <module>com.everis.core</module>
        <module>com.everis.web</module>
        <module>com.everis.mail</module>
        <module>com.everis.util</module>
        <module>pack-ws</module>
        <module>pack-ws.ear</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.6</java.version>
        <sonar.host.url>http://192.168.96.2:9000</sonar.host.url>
        <sonar.jdbc.url>jdbc:h2:tcp://192.168.96.2:9092/sonar</sonar.jdbc.url>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <additionalProjectnatures>
                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
                    </additionalProjectnatures>
                    <additionalBuildcommands>
                        <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
                    </additionalBuildcommands>
                    <wtpmanifest>true</wtpmanifest>
                    <wtpapplicationxml>true</wtpapplicationxml>
                    <wtpversion>2.0</wtpversion>
                    <downloadSources>false</downloadSources>
                    <downloadJavadocs>false</downloadJavadocs>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>8.1.9.v20130131</version>
                <configuration>
                    <war>${project.basedir}/pack-ws/target/pack-ws</war>
                    <jettyConfig>${project.basedir}/pack-ws/webapp/WEB-INF/jetty-ds-dev.xml</jettyConfig>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>c3p0</groupId>
                        <artifactId>c3p0</artifactId>
                        <version>0.9.1.2</version>
                    </dependency>
                    <dependency>
                        <groupId>com.oracle</groupId>
                        <artifactId>ojdbc6</artifactId>
                        <version>11.2.0.3</version>
                    </dependency>
                </dependencies>
                <!--
                <configuration>
                    <webAppSourceDirectory>${project.basedir}/pack-ws/src/main/java</webAppSourceDirectory>
                    <webApp>
                        <contextPath>/${project.build.finalName}</contextPath>
                        <descriptor>${project.basedir}/pack-ws/target/pack-ws/WEB-INF/web.xml</descriptor>
                        <jettyEnvXml>${project.basedir}/pack-ws/webapp/WEB-INF/jetty-env.xml</jettyEnvXml>
                    </webApp>
                    <classesDirectory>${project.basedir}/pack-ws/target/classes</classesDirectory>
                </configuration>
                -->
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <systemProperties>
                        <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=1024m</JAVA_OPTS>
                    </systemProperties>
                    <url>http://192.168.96.2:8081/manager/text</url>
                    <username>tomcat</username>
                    <password>tomcat</password>
                    <path>/${project.build.finalName}</path>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <formats>
                        <format>html</format>
                    </formats>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>